# JobDarJob

./: .gitignore  Makefile  README.md  config.py  pyproject.toml  settings.yaml
crawler/: items.py  pipelines.py  settings.py
crawler/spiders/: jobinja.py
db/: conection.py  connection.py  models.py
