[tool.poetry]
name = "jobdarjob"
version = "0.1.0"
description = ""
authors = ["Mohammadreza <mohammdrezasolo69@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.1"
mongoengine = "^0.28.2"
dynaconf = "^3.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
